- Using Spring AI